# d3q

./: AUTHORS  CMakeLists.txt  CMakeLists.txt-QE.patch  LICENSE  License  Makefile  README.md
D3Q/: Makefile
D3Q/Doc/: ChangeLog  INPUT_D3.txt  manual-d3q.odt  manual-thermal2.odt  manual.odt
D3Q/Examples/: README  clean_all  input.SQOM  mat3R.NULL  typescript
D3Q/Q2R3/: Makefile  libs.f90  mat3q2r.f90  run_mat3q2r
D3Q/Q2R_ml/: Makefile  libs.f90  mat2q2r.f90
D3Q/examples/: README  clean_all
D3Q/extra/: funct.f90  memstat.c
D3Q/src/: Makefile  allocate_d3.f90  allocate_pert_d3.f90  d2mxc.f90  d3_basis.f90  d3_debug.f90  d3_exc.f90  d3_exc_gc.f90  d3_grid.f90  d3_h_psi.f90  d3_init.f90  d3_iofiles.f90  d3_nlcc.f90  d3_open.f90  d3_readin.f90  d3_recover.f90  d3_reset.f90  d3_restart.f90  d3_setup.f90  d3_shuffle.f90  d3_symmetry.f90  d3_valence.f90  d3com.f90  d3ionq.f90  d3matrix.f90  d3matrix_io.f90  d3matrix_io2.f90  d3matrix_io_fox.f90  d3q.f90  dpsi1dpsi2dv3.f90  dpsi1dv2dpsi3.f90  dq1rhodq23v.f90  dq_vscf.f90  drho_add_phase.f90  dvdpsi.f90  efermi_shift.f90  gen_dpdvp.f90  h_psiq.f90  incdrhoscf2.f90  make.depend  (+11 more)
D3Q/thermal/: Makefile  libs.f90  linpack.f90  mat_input.f90  modules.f90  nanosec.c  thermalk.f90
D3Q/thermal2/: Makefile  PROGRAM_asr3.f90  PROGRAM_db.f90  PROGRAM_decompose_d2.f90  PROGRAM_import3py.f90  PROGRAM_import_shengbte.f90  PROGRAM_lw.f90  PROGRAM_make_wedge.f90  PROGRAM_q2r.f90  PROGRAM_qha.f90  PROGRAM_qq2rr.f90  PROGRAM_r2q.f90  PROGRAM_recenter.f90  PROGRAM_sparse.f90  PROGRAM_sqom.f90  PROGRAM_tk.f90  asr2.f90  asr3.f90  casimir.f90  cmdline_param.f90  code_input.f90  decompose_d2.f90  dynbubble.f90  eos.f90  f3_bwfft.f90  fc2_interp.f90  fc3_interp.f90  final_state.f90  funcoft.sh  functions.f90  gen_sparse.f90  input_fc.f90  interp_fc.f90  isotopes.f90  linewidth.f90  lw.f90  make.depend  makedeps.sh  mc_grids.f90  merge_degenerate.f90  (+25 more)
D3Q/tools/: Makefile  apply_asr.sh  d3_sc2c.f90  diffd3.f90  fc2mat2R.sh  import_phonopy.py  import_phonopy_qe.py  import_phonopy_vasp.py  make.depend  mangle.py  plot-mangle.gp  read_d3dyn.f90  recompute-sma-mfp.m  recompute-sma.m  recompute-sma.oct  sc2c.f90  sc2c_tools.f90  sc3c.f90  xml2giorgia.f90
Doc/: ChangeLog  README  d3q-manual.html  thermal2-manual.html
Examples/: README  clean_all
Examples/Graphene/: LIST  d3q.in  input.LW  plot-lw.gp  pw.in
Examples/Import_FD/: README  mat2R  mat3R.shengbte  template.in
Examples/MgO/: d3q.in  input.FS  input.R2Q  input.SPF  ph.in  plot-fs.gp  plot-fs1.gp  plot-projected.gp  plot-spf.gp  pw.in  q2r.in  run
Examples/QHA/: input.QHA0  ph.in  plot-gofv.gp  pw.in  q2r.in  run.sh
Examples/Silicon/: ph.in  plot-lw.gp  run
Examples/TDPH/: C.upf  dyn4  dyn5  dyn6  input.R2Q  input.TDPH  md.in  ph.in  (+4 more)
distributed/: Makefile  extrablacs.c  lmpar.c  plmdif.c  plmdif1.c  pminpack.h  qrsolv.c
extra/: wrappers.f90
lapackified/: Makefile  README.md  enorm.c  hybrbase.c  hybrj1.c  lmbase.c  lmdif1.c  minpack.h  qrsolv.c
minpack/: README
src/: Makefile  allocate_d3.f90  cgsolve_d3.f90  cmdline_param.f90  d2mxc.f90  d3_basis.f90  d3_exc.f90  d3_exc_gc.f90  d3_h_psi.f90  d3_init.f90  d3_iofiles.f90  d3_nlcc.f90  d3_readin.f90  d3_restart.f90  d3com.f90  d3ionq.f90  d3matrix.f90  d3matrix_io2.f90  d3q.f90  dpsi1dpsi2dv3.f90  dpsi1dv2dpsi3.f90  dq1rhodq23v.f90  dq_vscf.f90  drho_add_phase.f90  efermi_shift.f90  gen_dpdvp.f90  h_psiq.f90  make.depend  makedeps.sh  print_clock_d3.f90  rhodq123v.f90  run_nscf_d3.f90  setup_d3gc.f90  solve_linter_d3q.f90  stop_d3.f90
thermal2/: ACRS.f90  Makefile  PROGRAM_asr3.f90  PROGRAM_db.f90  PROGRAM_decompose_d2.f90  PROGRAM_gruneisen.f90  PROGRAM_import_shengbte.f90  PROGRAM_impurity.f90  PROGRAM_interpolate2.f90  PROGRAM_lw.f90  PROGRAM_make_wedge.f90  PROGRAM_mtx.f90  PROGRAM_q2r.f90  PROGRAM_qha.f90  PROGRAM_qq2rr.f90  PROGRAM_qq2rr_s.f90  PROGRAM_r2q.f90  PROGRAM_recenter.f90  PROGRAM_rmzeu.f90  PROGRAM_sparse.f90  PROGRAM_sqom.f90  PROGRAM_tdph.f90  PROGRAM_tk.f90  asr2.f90  casimir.f90  cmdline_param.f90  code_input.f90  decompose_d2.f90  decompose_zstar.f90  dynbubble.f90  eos.f90  f3_bwfft.f90  fc2_interp.f90  fc3_interp.f90  final_state.f90  funcoft.sh  functions.f90  gruneisen.f90  harmonic.f90  input_fc.f90  (+26 more)
tools/: Makefile  d3_sc2c.f90  diffd3.f90  fc2mat2R.sh  import_phonopy_qe.py  import_phonopy_vasp.py  recompute-sma.m  sc2c.f90  sc2c_tools.f90  sc3c.f90  xml2giorgia.f90
(+830 files in other folders)
